--- a/src/Ef040001_Samurai/SamuraiApp.Data/SamuraiApp.Data.csproj
+++ b/src/Ef040001_Samurai/SamuraiApp.Data/SamuraiApp.Data.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\SamuraiApp.Domain\SamuraiApp.Domain.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
